--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-proptest = "1.0.0"
+proptest = "^1.0.0"
 rand = "^0.8.0"
 
 [dependencies.rusqlite]
-version = "0.25.1"
+version = "^0.25.1"
 features = ["bundled"]
